--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.6.7",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "logrocket": "^8.0.1",
     "mysql": "^2.18.1",
     "nodemon": "^3.0.3",
     "react": "^18.2.0",
@@ -18,7 +19,8 @@
   },
   "scripts": {
     "build:staging": "env-cmd -f .env.staging npm run build",
-    "start": "nodemon server.js",
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
